--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,9 @@
 
 body {
   font-family: 'Poppins', sans-serif;
+  background-image: url('./assets/background.jpg');
+  background-size: cover;
   background-color: #7161ef;
-  color: white;
   font-size: 16px;
 }
 
@@ -21,10 +22,15 @@ body {
 
 h1 {
   text-align: center;
+  color: #0d6efd;
+  text-transform: uppercase;
+  font-size: 25px;
+  letter-spacing: 1px;
 }
 
 form button {
-  background-color: #f1e6e1;
+  background-color: #0d6efd;
+  color: white !important;
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
@@ -37,6 +43,7 @@ form button {
 ::placeholder,
 select {
   font-family: 'Poppins', sans-serif;
+  color: rgb(121, 125, 129);
 }
 
 .text-field {
@@ -47,12 +54,19 @@ select {
   border: none;
   border-radius: 5px;
   outline: none;
-  background-color: #f1e6e1;
+  background-color: #e9ecef;
+
 }
 
 .answers-div label,
 .answers-div input {
   display: inline-block;
+}
+
+.selection-form label {
+  display: inline-block;
+  margin-bottom: 5px;
+  font-weight: 600;
 }
 
 .answers-div input {
@@ -70,13 +84,11 @@ select {
 .selection-form,
 .question-card {
   background-color: #fff;
-  width: 600px;
+  width: 500px;
   max-width: 90%;
-  margin: 50px auto;
-  color: #5a6066;
-  border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.35) 0 5px 15px;
-}
+  margin: 60px auto;
+  color: rgb(80, 83, 87);
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;}
 
 .flex {
   display: flex;
@@ -96,4 +108,12 @@ select {
 
 .question-section {
   margin-bottom: 20px;
+}
+
+.category {
+  color: #0d6efd;
+}
+
+.backbtn {
+  margin: 20px 0;
 }
